# pocketOS

./: README.md  mix.exs
.github/workflows/: build-and-test.yaml
core/: CMakeLists.txt  icons_menu.ex  input.erl  input_box.ex  main_menu.ex  scene.erl
lib/: config.ex  config_editor.ex  file.ex  hal.ex  main.ex  map.ex  menu.ex  mesh_messages.ex  mesh_nodes.ex  mesh_trace.ex  meshcore_callbacks.ex  meshtastic_callbacks.ex  node_key.ex  nvs_fs.ex  power.ex  radio_launcher.ex  shut_down.ex  stacked_fs.ex  terminal.ex  traceroute.ex  ui.ex  wasm_launcher.ex
lib/cli_apps/: lora_monitor.ex
lib/photon_ui/: ui_server.ex
priv/config-schemas/: identity.sxp  meshcore.sxp  meshtastic.sxp  network.sxp  radi0cfg.sxp
src/: bq25896_driver.erl  config_schema.erl  ed25519_x25519.erl  gps_server.erl  lora_sx126x.erl  mesh_trace.hrl  meshcore_presets.erl  meshcore_protocol.erl  meshcore_server.erl  meshcore_server_core.erl  meshtastic.erl  meshtastic_presets.erl  meshtastic_proto.erl  meshtastic_server.erl  meshtastic_server_core.erl  radio_manager.erl  rotary_driver.erl  sx126x_cmd.erl  tca8418_driver.erl  xl9555_driver.erl
test/: config_editor_test.exs  config_schema_test.exs  config_test.exs  ed25519_x25519_test.exs  lora_sx126x_test.exs  meshcore_callbacks_test.exs  meshcore_presets_test.exs  meshcore_protocol_test.exs  meshcore_server_core_test.exs  meshcore_server_test.exs  meshtastic_callbacks_test.exs  meshtastic_presets_test.exs  meshtastic_proto_test.exs  meshtastic_server_core_test.exs  meshtastic_server_test.exs  meshtastic_test.exs  nvs_fs_test.exs
(+2 files in other folders)
